# diet-guard

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  DESIGN_AUDIT_TODO.md  README.md  diet-guard-gate.service  diet-guard-sync.service  diet-guard-sync.timer  install.sh  pyproject.toml  requirements.txt
app/: README.md  analysis_options.yaml  install_arch.sh  pubspec.yaml  run.sh
app/.agents/skills/dart-collect-coverage/: SKILL.md
app/.agents/skills/dart-run-static-analysis/: SKILL.md
app/.agents/skills/dart-setup-ffi-assets/: SKILL.md
app/.agents/skills/flutter-add-widget-preview/: SKILL.md
app/.agents/skills/flutter-add-widget-test/: SKILL.md
app/.agents/skills/flutter-apply-architecture-best-practices/: SKILL.md
app/.agents/skills/flutter-fix-layout-issues/: SKILL.md
app/.agents/skills/flutter-implement-json-serialization/: SKILL.md
app/.agents/skills/flutter-setup-declarative-routing/: SKILL.md
app/.agents/skills/flutter-setup-localization/: SKILL.md
app/.agents/skills/flutter-use-http-package/: SKILL.md
app/android/app/: build.gradle.kts  proguard-rules.pro
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/kuhy/diet_guard_app/: MainActivity.kt
app/android/app/src/main/res/values/: colors.xml
app/desktop/: install_desktop_entry.sh
app/lib/: main.dart
app/lib/desktop/: github_proxy.dart  wrapper_server.dart
app/lib/models/: day_status.dart  food_bank_record.dart  food_entry.dart  food_suggestion.dart  local_time.dart  meal_component.dart  meal_item.dart  nutrition.dart  slot.dart
app/lib/screens/: calendar_screen.dart  edit_entry_screen.dart  food_bank_screen.dart  history_screen.dart  log_meal_screen.dart  meal_builder_screen.dart  photo_viewer_screen.dart  settings_screen.dart
app/lib/services/: app_settings_service.dart  background_check_service.dart  background_sync_service.dart  background_tasks.dart  background_tasks_io.dart  background_tasks_web.dart  blob_store.dart  blob_store_factory.dart  blob_store_indexeddb.dart  blob_store_io.dart  blob_store_web.dart  day_status_service.dart  desktop_wrapper.dart  document_store.dart  document_store_factory.dart  document_store_indexeddb.dart  document_store_io.dart  document_store_web.dart  due_slot_check.dart  foodbank_service.dart  frame_stats.dart  fuzzy.dart  github_client.dart  github_client_factory.dart  github_client_factory_io.dart  github_client_factory_web.dart  github_device_auth.dart  log_storage_service.dart  notification_backend.dart  notification_backend_factory.dart  notification_backend_io.dart  notification_backend_web.dart  notification_service.dart  photo_attach_service.dart  sync_merge.dart  sync_service.dart  sync_settings.dart  token_vault.dart  token_vault_factory.dart  token_vault_io.dart  (+1 more)
app/lib/ui/: theme.dart
app/lib/widgets/: attached_image.dart  attached_image_io.dart  attached_image_web.dart  autocomplete_suggestion_list.dart  day_status_calendar.dart  macro_input_row.dart  photo_attach_field.dart  slot_selector_row.dart  slot_status_bar.dart  streak_summary_row.dart
app/linux/: CMakeLists.txt  install_desktop_entry.sh
app/linux/runner/: my_application.cc
app/test/: fake_notifications.dart  fake_secure_storage.dart  widget_test.dart
app/test/desktop/: wrapper_server_test.dart
app/test/models/: day_status_test.dart  food_entry_test.dart  local_time_test.dart  meal_item_test.dart  nutrition_test.dart  slot_test.dart
app/test/screens/: calendar_screen_test.dart  edit_entry_screen_test.dart  food_bank_screen_test.dart  history_screen_test.dart  log_meal_screen_sync_test.dart  log_meal_screen_test.dart  meal_builder_screen_test.dart  settings_screen_test.dart
app/test/services/: app_settings_service_test.dart  background_check_service_test.dart  background_sync_service_test.dart  blob_store_io_test.dart  day_status_service_test.dart  due_slot_check_test.dart  foodbank_service_test.dart  fuzzy_test.dart  github_client_test.dart  github_device_auth_test.dart  indexeddb_stores_test.dart  log_storage_service_test.dart  notification_service_test.dart  photo_attach_service_test.dart  sync_merge_test.dart  sync_service_test.dart  sync_settings_test.dart
app/test/widgets/: day_status_calendar_test.dart  streak_summary_row_test.dart
app/web/: index.html  manifest.json
diet_guard/: __main__.py  _budget.py  _calendar_view.py  _cli.py  _cli_gate.py  _cli_sync.py  _coerce.py  _constants.py  _daystatus.py  _estimator.py  _foodbank.py  _gate.py  _gatelock.py  _gatelock_calendar.py  _gatelock_core.py  _gatelock_mealflow.py  _gatelock_nutrition.py  _gatelock_ui.py  _mcp.py  _meal.py  _portions.py  _resolve.py  _slots.py  _state.py  _sync.py  _sync_github.py  _sync_merge.py
diet_guard/tests/: conftest.py  test_budget.py  test_calendar_view.py  test_cli.py  test_cli_gate.py  test_cli_sync.py  test_daystatus.py  test_estimator.py  test_foodbank.py  test_fuzzy.py  test_gate.py  test_gatelock.py  test_gatelock_calendar.py  test_gatelock_mealflow.py  test_main.py  test_mcp.py  test_meal.py  test_portions.py  test_resolve.py  test_slots.py  test_state.py  test_sync.py  test_sync_github.py  test_sync_merge.py
docs/explanations/: 2026-07-13-explanation-calendar-streaks-budget-sync.html  2026-07-20-explanation-desktop-web-build.html  index.html
scripts/: check_requirements_sync.py  ci_mirror.sh  setup_mcp.sh
